fixing overflow and color on drop nav for responsive

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -142,8 +142,13 @@ ul.nav-tabs li {
 
 @media (max-width: @screen-sm-max) { 
 	#navbar {
-		margin-top: -9px;
+		margin-top: 0;
 		overflow: hidden;
+	}
+
+	#navbar.navbar-collapse {
+		padding-left: 0;
+		padding-right: 0;
 	}
 
 	ul.nav {
